# controllers/track/getPersonTrack.js
@@ -1,0 +1,36 @@
+import mysql from "mysql"
+
+export const getPersonTracks = async (req, res) => {
+  /* #swagger.tags = ['Tracks']
+  #swagger.description = 'Get one\'s  tracking list */
+  var query = 'SELECT * FROM ITEM INNER JOIN TRACK ON track_item_id = item_id INNER JOIN USER ON track_user_name = user_name JOIN POST ON item_post_title = post_title WHERE track_user_name = ?';
+
+  var db = mysql.createConnection({
+    // Change it to the public IP generated by ngrok
+    host: "127.0.0.1",
+    port: process.env.DB_PORT,
+    user: "root",
+    password: "123456",
+    database: "ShopDB",
+    multipleStatements: true
+  })
+  db.connect();
+  db.query(query, [req.params.myName], (err, rows) => {
+    if (err) throw err;
+    const allPosts = rows.map(async (row) => {
+      return {
+        postSeller: row.post_seller_name,
+        postTitle: row.item_post_title,
+        postContent: row.content,
+        recommendedPrice: row.price, 
+        postImg: row.image, 
+      }
+    })
+
+    Promise.all(allPosts).then((results) => {
+      console.log(results)
+      return res.status(200).json({ tracks: results });
+    })
+  })
+  db.end();
+}
